# RaceNet

./: .gitignore  README.md  TASKS.md  pyproject.toml  run_agent.py
.copilot/session-state/fbee1e20-cd0c-4873-b72a-a24eaf4243a9/: plan.md
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  documentation-writer.agent.md  ml-engineer.agent.md  physics-engineer.agent.md  task-implementer.agent.md  telemetry-specialist.agent.md  test-engineer.agent.md  track-generator.agent.md
.github/prompts/: add-car-component.prompt.md  add-telemetry-channel.prompt.md  create-example.prompt.md  implement-task.prompt.md  review-physics.prompt.md
agent/: README.md  __init__.py  autonomous_agent.py  config.py  memory.py  orchestrator.py  perf.py  self_improvement.py  task_manager.py  tools.py
examples/: README.md
examples/basic_simulation/: README.md  run_simulation.py
examples/ml_training/: README.md  train_agent.py
examples/multi_car/: README.md  population_training.py
examples/telemetry_analysis/: README.md  record_telemetry.py
examples/track_generation/: README.md  generate_tracks.py
src/racenet/: __init__.py
src/racenet/car/: __init__.py  aero.py  car.py  chassis.py  electronics.py  engine.py  suspension.py  tires.py  transmission.py
src/racenet/ml/: __init__.py  environment.py  multi_car.py  spaces.py
src/racenet/scoring/: __init__.py  lap_timer.py  scoring_system.py  style_scorer.py
src/racenet/simulation/: __init__.py  physics.py  simulator.py  world.py
src/racenet/telemetry/: __init__.py  channel.py  exporter.py  recorder.py
src/racenet/track/: __init__.py  features.py  generator.py  segment.py  track.py
tests/: __init__.py  test_car.py  test_dynamics.py  test_ml.py  test_simulation.py  test_tires.py  test_track.py
